[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
mongodb = "3.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.208"
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
uuid = "1.10.0"
